<resources>
    <string name="app_name">SleepTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sleep Time Tracker</string>
    <string name="nav_header_subtitle">alryumin@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>

    <string name="fall_asleep">Fell Asleep:</string>
    <string name="wake_up">Woke Up:</string>
    <string name="sleep_time">Sleep Time:</string>
    <string name="start_at">Start at:</string>
    <string name="finish_at">Finish at:</string>

    <string name="sleep_time_tab_1">List</string>
    <string name="sleep_time_tab_2">Chart</string>

    <string name="sleep_time_edit_title">Edit SleepTime</string>
    <string name="sleep_time_edit_button_save">Save</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>

    <string name="sign_in_notice">Already have an account?</string>
    <string name="sign_up_notice">Don\'t have an account?</string>

    <string name="sign_in_title">Sign In</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>

    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>

    <string name="reset_success">Reset successfully</string>
    <string name="save_success">Saved successfully</string>

    <string name="error_empty_email">Please enter valid email</string>
    <string name="error_empty_password">Password can\'t be empty</string>
    <string name="error_empty_password_repeat">Password repeat can\'t be empty</string>
    <string name="error_password_not_match">Passwords doesn\'t match</string>
    <string name="error_offline">You are offline.</string>
    <string name="error_sign_in">E-mail or password is wrong</string>
    <string name="error_sign_up">E-mail or password is wrong</string>
    <string name="error_sleep_time_duaration">Sleep time can\'t be less or equals to 0</string>

    <string name="authentication_failed">Authentication failed</string>

    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_activity_track">Activities</string>
    <string name="nav_sleep_time">Sleep Time</string>
    <string name="nav_edit_sleep_time">Edit Sleep Time</string>
    <string name="nav_target">Targets</string>
    <string name="manage_sleep">Manage Your Sleep</string>

    <string name="add_sleep_time_title">Sleep Time</string>

    <string name="settings_min_time_title">Min Sleep Time</string>

    <string name="target_title">Target</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_view">SleepTimeEditView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activities">Activities</string>
    <string name="title_sleep_time">Sleep Time</string>
    <string name="title_targets">Targets</string>
    <string name="title_settings">Settings</string>
</resources>
