<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sleep_time"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_sleep_time" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_activity_track" />
        <item
            android:id="@+id/nav_target"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_target" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_sign_out" />
        </menu>
    </item>


</menu>
