<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentsignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authorization.view.SignInView">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signInTitle"
            android:theme="@style/TextViewPrimaryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in_title"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/logo_size"
            android:maxWidth="@dimen/logo_size"
            android:layout_gravity="center"/>

        <TextView
            android:theme="@style/TextViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manage_sleep"/>

        <EditText
            android:id="@+id/email"
            android:theme="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:theme="@style/EditTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/signInButton"
            style="@style/MainButtonText"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:background="@drawable/main_button"
            android:textColor="@drawable/main_button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_in"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/signUpNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up_notice"
            android:theme="@style/TextNotice" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up"
            android:background="?android:attr/selectableItemBackground"
            android:theme="@style/LinkButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>