<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.target.view.TargetView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/text_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_weight=".50"
                android:text="@string/start_at"
                android:theme="@style/TextNotice" />

            <EditText
                android:id="@+id/startAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:focusable="false"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/text_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_weight=".50"
                android:text="@string/finish_at"
                android:theme="@style/TextNotice" />

            <EditText
                android:id="@+id/finishAt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:focusable="false"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/text_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_weight=".50"
                android:text="@string/nav_sleep_time"
                android:theme="@style/TextNotice" />

            <EditText
                android:id="@+id/sleepTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:focusable="false"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextPrimary" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:layout_marginBottom="@dimen/text_margin"
        android:paddingHorizontal="@dimen/text_padding">

        <Button
            android:id="@+id/buttonReset"
            android:background="@drawable/button_secondary"
            android:textColor="@drawable/button_secondary_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/buttonSave"
            android:background="@drawable/main_button"
            android:textColor="@drawable/main_button_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/button_save" />
    </LinearLayout>

</LinearLayout>