<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:orientation="vertical"
        android:background="@drawable/linear_chart_marker_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChartMarkerTitle"
                android:text="@string/fall_asleep" />
            <TextView
                android:id="@+id/fallAsleep"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryAccent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChartMarkerTitle"
                android:text="@string/wake_up" />
            <TextView
                android:id="@+id/wakeUp"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryAccent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChartMarkerTitle"
                android:text="@string/nav_sleep_time" />
            <TextView
                android:id="@+id/sleepTime"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryAccent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/arrow_shape"
        android:rotation="180" />

</LinearLayout>